# cmake-maven-plugin

./: README.md  pom.xml
src/main/java/com/borasoftware/balau/: AbstractCMakeMojo.java  CMakeCleanMojo.java  CMakeCompileMojo.java  CMakeConfigureMojo.java  CMakeTestCompileMojo.java
src/main/java/com/borasoftware/balau/builder/: CMake.java  Make.java  (+1 more)
src/main/java/com/borasoftware/maven/: AbstractCMakeMojo.java  CMakeCleanMojo.java  CMakeCompileMojo.java  CMakeConfigureMojo.java  CMakeMavenCleanMojo.java  CMakeMavenCompileMojo.java  CMakeMavenConfigureMojo.java  CMakeMavenTestCompileMojo.java  CMakeTestCompileMojo.java
src/test/acceptance/: CMakeLists.txt  pom.xml  readme.txt
src/test/java/com/borasoftware/balau/: AbstractCMakeMojoTest.java  CMakeCleanMojoTest.java  CMakeCompileMojoTest.java  CMakeConfigureMojoTest.java  CMakeFailing1ConfigureMojoTest.java  CMakeFailing2ConfigureMojoTest.java  CMakeFailingConfigureMojoTest.java  CMakeTestCompileMojoTest.java
src/test/java/com/borasoftware/maven/: AbstractCMakeMojoTest.java  CMakeCleanMojoTest.java  CMakeCompileMojoTest.java  CMakeConfigureMojoTest.java  CMakeMavenCleanMojoTest.java  CMakeMavenCompileMojoTest.java  CMakeMavenConfigureMojoTest.java  CMakeMavenTestCompileTestMojo.java  CMakeTestCompileMojoTest.java
src/test/resources/test-project/: pom.xml
src/test/test-project/: CMakeLists.txt  pom.xml
src/test/test-project/src/main/cpp/: Lib.cpp
src/test/test-project1/: CMakeLists.txt  pom.xml
src/test/test-project2/: CMakeLists.txt  pom.xml
src/test/test-project3/: pom.xml
src/test/test-project3/incorrectBinary/: cmake
src/test/testProjectSrc/main/cpp/: App.cpp  Lib.hpp
src/test/testProjectSrc/test/cpp/: LibTest.cpp
(+10 files in other folders)
